--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Form Pemesanan | StudyNeeds</title>
-  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+  <title>Form Pemesanan | Angel Store</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Comic Neue', cursive;
-      background: #fff0f0;
-      padding: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #fdf8f7;
       margin: 0;
+      padding: 0;
+      color: #333;
     }
     header {
-      background-color: #ff9999;
+      background-color: #9e4b4b;
       padding: 20px;
       text-align: center;
       color: white;
@@ -23,15 +24,15 @@
       max-width: 600px;
       margin: auto;
       background: white;
-      margin-top: 30px;
+      margin-top: 20px;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
     label {
-      font-weight: bold;
       display: block;
       margin-top: 15px;
+      font-size: 15px;
     }
     select, input, textarea {
       width: 100%;
@@ -39,11 +40,12 @@
       margin-top: 5px;
       border: 1px solid #ccc;
       border-radius: 6px;
+      font-family: inherit;
     }
     button {
       margin-top: 20px;
       padding: 12px;
-      background-color: #ff4d4d;
+      background-color: #9e4b4b;
       color: white;
       border: none;
       border-radius: 8px;
@@ -51,22 +53,66 @@
       font-size: 16px;
       width: 100%;
     }
+    .message {
+      margin-top: 10px;
+      background: #d4edda;
+      color: #155724;
+      padding: 10px;
+      border-radius: 5px;
+      display: none;
+    }
+    .reminder {
+      background: #fff3cd;
+      color: #856404;
+      border: 1px solid #ffeeba;
+      padding: 12px;
+      border-radius: 6px;
+      margin-top: 25px;
+      font-size: 14px;
+    }
+    .help {
+      margin-top: 18px;
+      font-size: 13px;
+      text-align: center;
+    }
+    .help a {
+      color: #9e4b4b;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .custom-alert {
+      display: none;
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #ffe8e8;
+      color: #8b0000;
+      padding: 15px 20px;
+      border-radius: 10px;
+      font-size: 14px;
+      font-weight: bold;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      z-index: 9999;
+    }
   </style>
 </head>
 <body>
+  <div class="custom-alert" id="customAlert">Eittss!! Formnya isi dengan lengkap ya kak &lt;3</div>
+
   <header>
-    <h1>Form Pemesanan</h1>
-    <p>by Angel Store</p>
+    <h1>Form Pemesanan Angel Store</h1>
   </header>
   <div class="container">
     <label for="produk">Pilih Produk</label>
     <select id="produk">
-      <option value="">-- Pilih --</option>
+      <option value="">-- Pilih Produk --</option>
       <option>cek turnitin</option>
-      <option>cek ai indo & eng</option>
+      <option>cek ai english</option>
+      <option>cek ai indo</option>
       <option>translate file (deepl)</option>
       <option>unlock docs</option>
-      <option>akun chatgpt pro/plus</option>
+      <option>akun chatgpt plus</option>
       <option>akun turnitin biasa</option>
       <option>akun turnitin cek ai</option>
       <option>akun gptzero</option>
@@ -80,7 +126,7 @@
       <option>numerade</option>
       <option>humata ai</option>
       <option>perplexity ai</option>
-      <option>connected ai</option>
+      <option>connected papers</option>
       <option>scribd</option>
       <option>wps office</option>
       <option>gamma ai</option>
@@ -94,19 +140,38 @@
       <option>blackbox ai</option>
     </select>
 
-    <label for="jumlah">Jumlah</label>
-    <input type="number" id="jumlah" placeholder="Misal: 1">
+    <label for="jumlah">Jumlah / Durasi / Paket</label>
+    <input type="text" id="jumlah" placeholder="Contoh: 1x cek / 1 bulan / 100 koin">
 
     <label for="catatan">Catatan Tambahan</label>
-    <textarea id="catatan" rows="3" placeholder="Contoh: kirim hari ini ya kak 🙏"></textarea>
+    <textarea id="catatan" rows="3" placeholder="Contoh: kirim hari ini ya kak 🙏 (kalau tidak ada, isi dengan -)"></textarea>
 
     <label for="nama">Nama Kamu</label>
-    <input type="text" id="nama" placeholder="Nama Lengkap">
+    <input type="text" id="nama" placeholder="Nama Kamu">
 
     <button onclick="kirimPesan()">Kirim ke WhatsApp</button>
+
+    <div class="message" id="pesanTerkirim">✅ Pesan siap dikirim ke WhatsApp!</div>
+
+    <div class="reminder">
+      💡 Setelah klik tombol, kamu akan diarahkan ke WhatsApp. Di sana kamu bisa <b>tanya harga langsung ke Angel</b> ya!
+    </div>
+
+    <div class="help">
+      ❓ Bingung cara pakai form ini? <a href="https://wa.me/6281263515698" target="_blank">Klik di sini untuk tanya langsung ke WhatsApp Angel</a>
+    </div>
   </div>
 
   <script>
+    function showAlert(msg) {
+      const el = document.getElementById("customAlert");
+      el.innerHTML = msg;
+      el.style.display = "block";
+      setTimeout(() => {
+        el.style.display = "none";
+      }, 3000);
+    }
+
     function kirimPesan() {
       const produk = document.getElementById("produk").value;
       const jumlah = document.getElementById("jumlah").value;
@@ -114,14 +179,18 @@
       const nama = document.getElementById("nama").value;
 
       if (!produk || !jumlah || !nama) {
-        alert("Mohon lengkapi semua kolom yang wajib diisi.");
+        showAlert("Eittss!! Formnya isi dengan lengkap ya kak <3");
         return;
       }
 
       const message = `Halo kak! Saya ingin memesan:\n\nProduk: ${produk}\nJumlah: ${jumlah}\nCatatan: ${catatan}\nNama: ${nama}`;
       const encoded = encodeURIComponent(message);
       const url = `https://wa.me/6281263515698?text=${encoded}`;
-      window.open(url, "_blank");
+
+      document.getElementById("pesanTerkirim").style.display = "block";
+      setTimeout(() => {
+        window.open(url, "_blank");
+      }, 1200);
     }
   </script>
 </body>
